# CVPipeline

./: CMakeLists.txt  README  cvpipeline.cpp  cvpipeline.h  defauilt_conf.json  main.cpp
modules/: fgbg.cpp  fgbg.h  fgsegm.cpp  fgsegm.h  firebbox.cpp  firebbox.h  firevalidation.cpp  firevalidation.h  fireweight.cpp  fireweight.h  flamesrcbbox.cpp  flamesrcbbox.h  image_part.cpp  image_part.h  intrusion_area.cpp  intrusion_area.h  object_extracting.cpp  object_extracting.h  object_tracker.cpp  object_tracker.h  rfiremaskingmodel.cpp  rfiremaskingmodel.h
